ebextensions platform config syntax fix

--- a/.ebextensions/eb-platform.config
+++ b/.ebextensions/eb-platform.config
@@ -2,6 +2,6 @@ option_settings:
   aws:elasticbeanstalk:managedactions:
     ManagedActionsEnabled: true
     PreferredStartTime: "Tue:02:00"
-    platformupdate:
+  aws:elasticbeanstalk:managedactions:platformupdate:
       UpdateLevel: minor
       InstanceRefreshEnabled: false
