Disable autoscaling by limiting group to 1 instance (temporary fix till gracious instance termination on scaling down is figured out)

--- a/.ebextensions/aws-autoscaling.config
+++ b/.ebextensions/aws-autoscaling.config
@@ -1,11 +1,10 @@
 option_settings:
   aws:ec2:instances:
     InstanceTypes: t3.medium
-  # aws:autoscaling:asg:
-  #   Availability Zones: Any
-  #   Cooldown: '360'
-  #   MaxSize: '1'
-  #   MinSize: '1'
+  aws:autoscaling:asg:
+    Availability Zones: Any
+    MaxSize: 1
+    MinSize: 1
   # aws:autoscaling:trigger:
   #   BreachDuration: 5
   #   MeasureName: CPUUtilization
