Moved pom version overwrite to separate make targets (for developers usage) and gh-actions scripts (for main build and deployment to alpha)

--- a/.github/workflows/main-build-and-deploy.yml
+++ b/.github/workflows/main-build-and-deploy.yml
@@ -18,6 +18,9 @@ jobs:
       shell: bash
       run: |
         echo "##[set-output name=tagname;]$(git describe)"
+    - name: Overwrite application version
+      run: |
+        mvn versions:set -DnewVersion=${{ steps.vars.outputs.tagname }}
     - name: Build application
       run: |
         make all
