Fixed git describe with info

--- a/.github/workflows/main-build-and-deploy.yml
+++ b/.github/workflows/main-build-and-deploy.yml
@@ -13,6 +13,7 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+    - run: git fetch --prune --unshallow
     - name: Declare some variables
       id: vars
       shell: bash
