--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -27,13 +27,17 @@
         "react-query": "^3.19.6",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
-        "react-transition-group": "^4.4.1"
+        "react-transition-group": "^4.4.1",
+        "http-proxy-middleware": "latest"
     },
     "scripts": {
         "start": "react-scripts start",
+        "start-alpha": "API_URL=https://alpha-curation.alliancegenome.org react-scripts start",
+        "start-local": "API_URL=http://localhost:8080 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "check-env": "node -e 'console.log(process.env)' | grep npm"
     },
     "eslintConfig": {
         "extends": "react-app"
@@ -43,6 +47,7 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ],
-    "proxy": "http://localhost:8080"
+    ]
+
 }
+
