--- a/src/main/cliapp/Makefile
+++ b/src/main/cliapp/Makefile
@@ -6,7 +6,10 @@ run:
 
 build:
 	npm run-script build
+
+build-dev: build
 	cp build/index.html ../resources/META-INF/resources
+	cp build/favicon.ico ../resources/META-INF/resources
 	rm -fr ../resources/META-INF/resources/assets
 	rm -fr ../resources/META-INF/resources/static
 	mv build/assets ../resources/META-INF/resources
