--- a/.github/workflows/github-production-release.yml
+++ b/.github/workflows/github-production-release.yml
@@ -8,6 +8,11 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+    - name: Declare some variables
+      id: vars
+      shell: bash
+      run: |
+        echo "##[set-output name=tagname;]$(echo ${GITHUB_REF#refs/tags/})"
     - name: AWS credentials configuration
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -22,8 +27,8 @@ jobs:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         ECR_REPOSITORY: agr_curation
       run: |
-        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/} .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${GITHUB_REF#refs/tags/}
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.vars.outputs.tagname }} .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:${{ steps.vars.outputs.tagname }}
   deploy-to-production:
     needs: [build-release-image]
     runs-on: ubuntu-20.04
