--- a/pom.xml
+++ b/pom.xml
@@ -235,6 +235,14 @@
 					</systemPropertyVariables>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>3.0.0-M4</version>
+				<configuration>
+					<tagNameFormat>v@{project.version}</tagNameFormat>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
@@ -266,15 +274,6 @@
 								</configuration>
 							</execution>
 						</executions>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-release-plugin</artifactId>
-						<version>3.0.0-M4</version>
-						<configuration>
-							<tagBase>https://github.com/alliance-genome/agr_curation/releases</tagBase>
-							<tagNameFormat>@{project.version}</tagNameFormat>
-						</configuration>
 					</plugin>
 				</plugins>
 			</build>
