Added initial code for case insensitive

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ quarkus.hibernate-search-orm.elasticsearch.protocol=http
 quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
 quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
 
+quarkus.hibernate-search-orm.elasticsearch.analysis.configurer=bean:ApplicationAnalysisConfig
+
 quarkus.qpid-jms.username=quarkus
 quarkus.qpid-jms.password=quarkus
 
