--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -16,6 +16,7 @@
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
+        "http-proxy-middleware": "^2.0.1",
         "node-sass": "^4.12.0",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
@@ -27,8 +28,7 @@
         "react-query": "^3.19.6",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
-        "react-transition-group": "^4.4.1",
-        "http-proxy-middleware": "^2.0.1"
+        "react-transition-group": "^4.4.1"
     },
     "scripts": {
         "start": "react-scripts start",
