--- a/.ebextensions/aws-autoscaling.config
+++ b/.ebextensions/aws-autoscaling.config
@@ -1,6 +1,6 @@
 option_settings:
   aws:ec2:instances:
-    InstanceTypes: r6g.large
+    InstanceTypes: r5.large
   aws:autoscaling:asg:
     Availability Zones: Any
     MaxSize: 1
