--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-resteasy-jaxb</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-resteasy-multipart</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-hibernate-envers</artifactId>
 		</dependency>
 		<dependency>
@@ -167,10 +175,7 @@
 			<version>0.27.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-resteasy-jaxb</artifactId>
-		</dependency>
+
 
 
 		<dependency>
