Added code for job queuing and file downloads from FMS

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,4 +28,5 @@ quarkus.qpid-jms.password=quarkus
 %dev.quarkus.qpid-jms.url=amqp://localhost:5672
 
 
-#%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
+//%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
+//%dev.quarkus.log.category."org.alliancegenome".level=DEBUG
