--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-vertx</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
@@ -175,7 +179,11 @@
 			<version>0.27.0</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.github.mmazi</groupId>
+			<artifactId>rescu</artifactId>
+			<version>2.0.4</version>
+		</dependency>
 
 
 		<dependency>
