--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,8 @@ quarkus.hibernate-search-orm.elasticsearch.analysis.configurer=bean:ApplicationA
 quarkus.qpid-jms.username=quarkus
 quarkus.qpid-jms.password=quarkus
 
+quarkus.vertx.max-worker-execute-time=PT1H
+
 %dev.quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
 %dev.quarkus.qpid-jms.url=amqp://localhost:5672
