--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,11 +25,15 @@ quarkus.qpid-jms.password=quarkus
 
 quarkus.vertx.max-worker-execute-time=PT1H
 
-bulk.data.loads.enabled = false
-
 %dev.quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
 %dev.quarkus.qpid-jms.url=amqp://localhost:5672
+
+bulk.data.loads.schedulingEnabled = true
+bulk.data.loads.s3Bucket = agr-curation-files
+%dev.bulk.data.loads.s3PathPrefix = alpha
+
+%dev.quarkus.live-reload.instrumentation = true
 
 //%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
 //%dev.quarkus.log.category."org.alliancegenome".level=DEBUG
