--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ quarkus.vertx.max-worker-execute-time=PT1H
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
 %dev.quarkus.qpid-jms.url=amqp://localhost:5672
 
-bulk.data.loads.schedulingEnabled = true
+bulk.data.loads.schedulingEnabled = false
 bulk.data.loads.s3Bucket = agr-curation-files
 %dev.bulk.data.loads.s3PathPrefix = alpha
 
