Turned off by default loads

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,12 +29,14 @@ quarkus.vertx.max-worker-execute-time=PT1H
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
 %dev.quarkus.qpid-jms.url=amqp://localhost:5672
 
-bulk.data.loads.schedulingEnabled = false
+bulk.data.loads.schedulingEnabled = true
 bulk.data.loads.s3Bucket = agr-curation-files
 bulk.data.loads.s3AccessKey = ""
 bulk.data.loads.s3SecretKey = ""
 %dev.bulk.data.loads.s3PathPrefix = alpha
 
+%dev.bulk.data.loads.s3PathPrefix = alpha
+%dev.bulk.data.loads.schedulingEnabled = false
 %dev.quarkus.live-reload.instrumentation = true
 
 //%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
