Fix for ENV variables and testing

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,20 +20,20 @@ quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
 
 quarkus.hibernate-search-orm.elasticsearch.analysis.configurer=bean:ApplicationAnalysisConfig
 
-quarkus.qpid-jms.username=quarkus
-quarkus.qpid-jms.password=quarkus
+
 
 quarkus.vertx.max-worker-execute-time=PT1H
 
 %dev.quarkus.hibernate-search-orm.elasticsearch.hosts=localhost:9200
 %dev.quarkus.datasource.jdbc.url=jdbc:postgresql://localhost:5432/curation
-%dev.quarkus.qpid-jms.url=amqp://localhost:5672
+
 
 bulk.data.loads.schedulingEnabled = true
 bulk.data.loads.s3Bucket = agr-curation-files
 bulk.data.loads.s3AccessKey = ""
 bulk.data.loads.s3SecretKey = ""
-%dev.bulk.data.loads.s3PathPrefix = alpha
+bulk.data.loads.s3PathPrefix = dev
+
 
 %dev.bulk.data.loads.schedulingEnabled = false
 %dev.quarkus.live-reload.instrumentation = true
