Send application logs to central log server, AGR-574

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,10 @@ services:
   curation.app:
     container_name: agr.curation.${NET}.api.server
     image: 100225593120.dkr.ecr.us-east-1.amazonaws.com/agr_curation:${AGR_CURATION_RELEASE}
+    logging:
+      driver: gelf
+      options:
+        gelf-address: 'udp://logs.alliancegenome.internal:12201'
     ports:
       - "8080:8080"
     networks:
