--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>org.alliancegenome</groupId>
 	<artifactId>agr_curation_api</artifactId>
 	<name>AGR Curation :: API</name>
-	<version>0.1.0-rc5</version>
+	<version>0.1.0-rc6-SNAPSHOT</version>
 
 	<properties>
 
@@ -24,7 +24,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:alliance-genome/agr_curation.git</developerConnection>
-		<tag>v0.1.0-rc5</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<distributionManagement>
