--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.alliancegenome</groupId>
 	<artifactId>agr_curation_api</artifactId>
 	<name>AGR Curation :: API</name>
-	<version>0.1.0-rc5-SNAPSHOT</version>
+	<version>0.1.0-rc5</version>
 
 	<properties>
 
@@ -26,7 +24,7 @@
 
 	<scm>
 		<developerConnection>scm:git:git@github.com:alliance-genome/agr_curation.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>v0.1.0-rc5</tag>
 	</scm>
 
 	<distributionManagement>
