--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -13,9 +13,13 @@
         "@fullcalendar/daygrid": "4.0.1",
         "@fullcalendar/interaction": "4.0.2",
         "@fullcalendar/timegrid": "4.0.1",
+        "@okta/okta-auth-js": "^5.10.0",
+        "@okta/okta-react": "^6.4.1",
+        "@okta/okta-signin-widget": "^5.16.0",
         "axios": "^0.19.0",
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
+        "http-proxy-middleware": "^2.0.1",
         "node-sass": "^4.12.0",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
@@ -27,8 +31,7 @@
         "react-query": "^3.19.6",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
-        "react-transition-group": "^4.4.1",
-        "http-proxy-middleware": "^2.0.1"
+        "react-transition-group": "^4.4.1"
     },
     "scripts": {
         "start": "react-scripts start",
