--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -28,6 +28,7 @@
         "react": "^17.0.1",
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.1",
+        "react-gravatar": "^2.6.3",
         "react-query": "^3.19.6",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
