Added API authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,8 +37,19 @@ bulk.data.loads.s3PathPrefix = dev
 linkML.version = 1.0.0
 linkML.classes = DiseaseAnnotation,Gene,Allele,CHEBITerm,DAOTerm,DOTerm,EcoTerm,EMAPATerm,GOTerm,MATerm,MPTerm,NCBITaxonTerm,SOTerm,WBbtTerm,XcoTerm,ZecoTerm,ZfaTerm
 
+okta.authenication = true
+okta.client.id = ""
+okta.url = ""
+okta.client.secret = ""
+okta.api.token = ""
+%dev.okta.authenication = false
+
 %dev.bulk.data.loads.schedulingEnabled = false
 %dev.quarkus.live-reload.instrumentation = true
 
 //%dev.quarkus.log.category."org.hibernate.SQL".level=DEBUG
 //%dev.quarkus.log.category."org.alliancegenome".level=DEBUG
+//%dev.quarkus.log.category."si.mazi.rescu".level=TRACE
+
+
+
