Added dummy user for okta AUTH

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,12 +37,13 @@ bulk.data.loads.s3PathPrefix = dev
 linkML.version = 1.0.0
 linkML.classes = DiseaseAnnotation,Gene,Allele,CHEBITerm,DAOTerm,DOTerm,EcoTerm,EMAPATerm,GOTerm,MATerm,MPTerm,NCBITaxonTerm,SOTerm,WBbtTerm,XcoTerm,ZecoTerm,ZfaTerm
 
-okta.authenication = true
+okta.authentication = true
 okta.client.id = ""
 okta.url = ""
 okta.client.secret = ""
 okta.api.token = ""
-%dev.okta.authenication = false
+%dev.okta.authentication = false
+%test.okta.authentication = false
 
 %dev.bulk.data.loads.schedulingEnabled = false
 %dev.quarkus.live-reload.instrumentation = true
