Updated GH-action workflows for new branching names

--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -4,6 +4,9 @@ on:
     types: [synchronize, opened, reopened, edited]
     branches:
       - main
+      - alpha
+      - beta
+      - production
     paths-ignore:
       - '**.md'
       - .gitignore
