--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,7 +35,7 @@ bulk.data.loads.s3SecretKey = ""
 bulk.data.loads.s3PathPrefix = dev
 
 linkML.version = 1.0.0
-linkML.classes = "DiseaseAnnotation,Gene,Allele,CHEBITerm,DAOTerm,DOTerm,EcoTerm,EMAPATerm,GOTerm,MATerm,MPTerm,NCBITaxonTerm,SOTerm,WBbtTerm,XcoTerm,ZecoTerm,ZfaTerm"
+linkML.classes = DiseaseAnnotation,Gene,Allele,CHEBITerm,DAOTerm,DOTerm,EcoTerm,EMAPATerm,GOTerm,MATerm,MPTerm,NCBITaxonTerm,SOTerm,WBbtTerm,XcoTerm,ZecoTerm,ZfaTerm
 
 %dev.bulk.data.loads.schedulingEnabled = false
 %dev.quarkus.live-reload.instrumentation = true
