Added support for custom configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,7 @@ quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
 quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
 
 quarkus.hibernate-search-orm.elasticsearch.analysis.configurer=bean:ApplicationAnalysisConfig
-quarkus.hibernate.search.backend.indexes.schema_management.settings_file = hibernate/custom-index-settings.json
-
+quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file = hibernate/custom-index-settings.json
 
 quarkus.vertx.max-worker-execute-time=PT1H
 
