--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<quarkus.platform.group-id>io.quarkus.platform</quarkus.platform.group-id>
 		<okta.version>3.0.1</okta.version>
 		<okta.authn.version>2.0.0</okta.authn.version>
-		<quarkus.platform.version>2.6.1.Final</quarkus.platform.version>
+		<quarkus.platform.version>2.7.0.CR1</quarkus.platform.version>
 		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
 	</properties>
 
