Reduce noise deployments to alpha

--- a/.github/workflows/alpha-build-and-deploy.yml
+++ b/.github/workflows/alpha-build-and-deploy.yml
@@ -6,6 +6,8 @@ on:
     paths-ignore:
       - '**.md'
       - .gitignore
+      - .github/workflows/github-actions-PR-validation.yml
+      - .github/workflows/github-release-build-and-deploy.yml
 jobs:
   build-and-push-docker-image:
     runs-on: ubuntu-20.04
