Added fix to beta/production to correctly handle new branching strategy, SCRUM-1105

--- a/.github/workflows/github-actions-PR-validation.yml
+++ b/.github/workflows/github-actions-PR-validation.yml
@@ -3,9 +3,13 @@ on:
   pull_request:
     types: [synchronize, opened, reopened, edited]
     branches:
+      - main
       - alpha
       - beta
       - production
+    paths-ignore:
+      - '**.md'
+      - .gitignore
 jobs:
   check-branching-rules:
     if: github.event.action != 'edited' || github.event.changes.base
