--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,8 @@ quarkus.hibernate-orm.database.generation=update
 quarkus.hibernate-search-orm.elasticsearch.version=7.10.2
 quarkus.hibernate-search-orm.elasticsearch.protocol=http
 quarkus.hibernate-search-orm.schema-management.strategy=create-or-update
-quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=sync
+quarkus.hibernate-search-orm.automatic-indexing.synchronization.strategy=async
+
 
 quarkus.hibernate-search-orm.elasticsearch.analysis.configurer=bean:ApplicationAnalysisConfig
 quarkus.hibernate-search-orm.elasticsearch.schema-management.settings-file = hibernate/custom-index-settings.json
