--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -20,6 +20,7 @@
         "chart.js": "2.7.3",
         "classnames": "^2.2.6",
         "http-proxy-middleware": "^2.0.1",
+        "moment": "^2.29.1",
         "node-sass": "^4.12.0",
         "primeflex": "2.0.0",
         "primeicons": "4.1.0",
@@ -29,6 +30,7 @@
         "react-app-polyfill": "^2.0.0",
         "react-dom": "^17.0.1",
         "react-gravatar": "^2.6.3",
+        "react-moment": "^1.1.1",
         "react-query": "^3.19.6",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.0",
