--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.quarkus</groupId>
+			<artifactId>quarkus-micrometer-registry-prometheus</artifactId>
+		</dependency>
+
+		<dependency>
 			<groupId>io.quarkiverse.hibernatetypes</groupId>
 			<artifactId>quarkus-hibernate-types</artifactId>
 			<version>0.2.0</version>
