Ignore the application properties file

--- a/.gitignore
+++ b/.gitignore
@@ -12,5 +12,6 @@ target
 src/main/webapp/index.html
 src/main/webapp/assets
 src/main/webapp/static
+src/main/resources/application.properties
 search_index
 .DS_Store
