--- a/.github/workflows/github-release-build-and-deploy.yml
+++ b/.github/workflows/github-release-build-and-deploy.yml
@@ -8,6 +8,7 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+    - run: cp src/main/resources/application.properties.defaults src/main/resources/application.properties
     - name: AWS credentials configuration
       uses: aws-actions/configure-aws-credentials@v1
       with:
@@ -30,6 +31,7 @@ jobs:
     steps:
     - name: Check out repository code
       uses: actions/checkout@v2
+    - run: cp src/main/resources/application.properties.defaults src/main/resources/application.properties
     - name: Save curation app version to be deployed in EB env variables through config file
       run: |
         cat .ebextensions/version.config
