--- a/src/main/cliapp/.editorconfig
+++ b/src/main/cliapp/.editorconfig
@@ -3,11 +3,11 @@ root = true
 
 [*]
 charset = utf-8
-indent_style = space
-indent_size = 4
+indent_style = tab
+indent_size = 3
 insert_final_newline = true
 trim_trailing_whitespace = true
-max_line_length = 300
+max_line_length = 600
 
 [*.md]
 max_line_length = off
