Initial Code for swap creation

--- a/.ebextensions/aws-autoscaling.config
+++ b/.ebextensions/aws-autoscaling.config
@@ -20,6 +20,8 @@ option_settings:
     IamInstanceProfile: S3DataAccess
     MonitoringInterval: 5 minute
     SecurityGroups: sg-21ac675b
+    RootVolumeType: gp3
+    RootVolumeSize: "128"
   # aws:autoscaling:updatepolicy:rollingupdate:
   #   MaxBatchSize: null
   #   MinInstancesInService: null
