Changed site from private to public

--- a/.ebextensions/aws-ec2-vpc.config
+++ b/.ebextensions/aws-ec2-vpc.config
@@ -8,10 +8,10 @@ option_settings:
      - subnet-04019d42d5c9e6fb9
      - subnet-049778993fb504a7c
     ELBSubnets:
-     - subnet-0d4703177afb1797d
-     - subnet-04262fc338f638054
-     - subnet-044457c061edf85f2
-     - subnet-04019d42d5c9e6fb9
-     - subnet-049778993fb504a7c
+     - subnet-3ebf4477
+     - subnet-df7c7487
+     - subnet-81c95ee4
+     - subnet-ff838bd5
+     - subnet-af62dca3
     VPCId: vpc-55522232
-    ELBScheme: internal
+    ELBScheme: public
