Upped ES max_result_window to allow display of all alleles

--- a/src/main/resources/hibernate/custom-index-settings.json
+++ b/src/main/resources/hibernate/custom-index-settings.json
@@ -2,5 +2,5 @@
   "number_of_shards": "4",
   "number_of_replicas": "0",
   "max_ngram_diff": "20",
-  "max_result_window": 500000
+  "max_result_window": 3000000
 }
