--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -21,6 +21,7 @@
         "chart.js": "3.3.2",
         "classnames": "^2.2.6",
         "http-proxy-middleware": "^2.0.1",
+        "immer": "^9.0.15",
         "moment": "^2.29.1",
         "primeflex": "3.1.0",
         "primeicons": "^5.0.0",
@@ -34,7 +35,8 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.1",
         "react-transition-group": "^4.4.1",
-        "sass": "^1.32.8"
+        "sass": "^1.32.8",
+        "use-immer": "^0.7.0"
     },
     "scripts": {
         "start": "react-scripts start",
