Fix GH action URL reporting in slack notifications (attempt 2)

--- a/.github/workflows/alpha-build-and-deploy.yml
+++ b/.github/workflows/alpha-build-and-deploy.yml
@@ -59,7 +59,7 @@ jobs:
               "fields": [
                 {
                   "title": "GitHub Actions URL",
-                  "value": "https://github.com/${{ github.event.org.login }}/${{ github.event.repo.name }}/actions/runs/${{ github.run_id }}"
+                  "value": "${{ github.event.repository.html_url }}/actions/runs/${{ github.run_id }}"
                 }
               ]
             }
