--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
 	<artifactId>agr_curation_api</artifactId>
 	<name>AGR Curation :: API</name>
 	<version>0.0.0</version>
+	<description>This software is for using the curation api as a library</description>
 	<url>https://github.com/alliance-genome/agr_curation</url>
 
 	<properties>
@@ -28,10 +29,12 @@
 		<surefire-plugin.version>3.0.0-M5</surefire-plugin.version>
 	</properties>
 
-	<scm>
-		<developerConnection>scm:git:git@github.com:alliance-genome/agr_curation.git</developerConnection>
-		<tag>HEAD</tag>
-	</scm>
+   <scm>
+      <connection>scm:git:git@github.com:alliance-genome/agr_curation.git</connection>
+      <developerConnection>scm:git:git@github.com:alliance-genome/agr_curation.git</developerConnection>
+      <url>https://www.github.com/alliance-genome/agr_curation/tree/master</url>
+      <tag>HEAD</tag>
+   </scm>
 
 	<licenses>
 		<license>
@@ -348,6 +351,34 @@
 					</execution>
 				</executions>
 			</plugin>
+         <plugin>
+            <groupId>org.sonatype.plugins</groupId>
+            <artifactId>nexus-staging-maven-plugin</artifactId>
+            <version>1.6.7</version>
+            <extensions>true</extensions>
+            <configuration>
+               <serverId>ossrh</serverId>
+               <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+               <autoReleaseAfterClose>true</autoReleaseAfterClose>
+            </configuration>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-gpg-plugin</artifactId>
+            <version>1.5</version>
+            <executions>
+               <execution>
+                  <id>sign-artifacts</id>
+                  <phase>verify</phase>
+                  <goals>
+                     <goal>sign</goal>
+                  </goals>
+                  <configuration>
+                     <keyname>AGR Admin</keyname>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
 
 
 			<plugin>
