--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -22,6 +22,7 @@
         "classnames": "^2.2.6",
         "http-proxy-middleware": "^2.0.1",
         "immer": "^9.0.15",
+        "jose": "^4.10.0",
         "moment": "^2.29.1",
         "primeflex": "3.1.0",
         "primeicons": "^5.0.0",
