--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -31,6 +31,7 @@
         "react": "^17.0.1",
         "react-app-polyfill": "^1.0.6",
         "react-dom": "^17.0.1",
+        "react-json-view": "^1.21.3",
         "react-moment": "^1.1.1",
         "react-query": "^3.34.15",
         "react-router-dom": "^5.2.0",
