--- a/src/main/cliapp/package.json
+++ b/src/main/cliapp/package.json
@@ -17,6 +17,9 @@
         "@okta/okta-auth-js": "^6.1.0",
         "@okta/okta-react": "^6.4.2",
         "@okta/okta-signin-widget": "^6.0.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^12.1.5",
+        "@testing-library/user-event": "^14.4.3",
         "axios": "^0.19.0",
         "chart.js": "3.3.2",
         "classnames": "^2.2.6",
@@ -35,7 +38,7 @@
         "react-moment": "^1.1.1",
         "react-query": "^3.34.15",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.1",
+        "react-scripts": "^4.0.0",
         "react-transition-group": "^4.4.1",
         "sass": "^1.32.8",
         "use-immer": "^0.7.0"
@@ -56,5 +59,8 @@
         "not dead",
         "not ie <= 11",
         "not op_mini all"
-    ]
+    ],
+    "devDependencies": {
+        "msw": "^0.48.1"
+    }
 }
